--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link href="./output.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <script src="script.js"></script>
+
     <title>XI TKJ</title>
   </head>
   <body style="background-color: black" ;>
@@ -32,7 +31,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
           <div class="container">
-            <img src="logomw.png" alt="" width="30" height="30" />
+            <img src="logomw.png" alt="" width="40" height="40" class="logo" />
           </div>
           <button
             class="navbar-toggler ms-auto"
@@ -48,8 +47,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Gallery</a>
-              <a class="nav-link" href="#">Stucture</a>
+              <a class="nav-link" href="#Gallery">Gallery</a>
+              <a class="nav-link" href="#Stucture">Stucture</a>
             </div>
           </div>
         </div>
@@ -61,85 +60,136 @@
         </header>
       </header>
     </div>
-
-    <div class="class text-center">
-      <h2>Class Gallery</h2>
-    </div>
-    <div
-      id="carouselExampleControls"
-      class="carousel slide m-auto"
-      data-bs-ride="carousel"
-    >
-      <div class="carousel-inner bg-dark">
-        <div class="carousel-item active">
-          <img src="foto/1.jpg" class="d-block w-50" alt="..." />
+    <main>
+      <div class="container-galery">
+        <div class="class text-center" id="Gallery" style="margin-top: 30px">
+          <h2>Class Gallery</h2>
         </div>
-        <div class="carousel-item">
-          <img src="foto/2.jpg" class="d-block w-50" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="foto/3.jpg" class="d-block w-50" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="foto/4.jpg" class="d-block w-50" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="foto/5.jpg" class="d-block w-50" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="foto/6.jpg" class="d-block w-50" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="foto/7.jpg" class="d-block w-50" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="foto/8.jpg" class="d-block w-50" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="foto/10.jpg" class="d-block w-50" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="foto/11.jpg" class="d-block w-50" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="foto/12.jpg" class="d-block w-50" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="foto/13.jpg" class="d-block w-50" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="foto/14.jpg" class="d-block w-50" alt="..." />
+        <div
+          id="carouselExampleControls"
+          class="carousel slide m-auto"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner" style="margin-top: 30px">
+            <div class="carousel-item active">
+              <img src="foto/2.jpg" class="d-block w-50" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="foto/3.jpg" class="d-block w-50" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="foto/4.jpg" class="d-block w-50" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="foto/5.jpg" class="d-block w-50" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="foto/6.jpg" class="d-block w-50" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="foto/7.jpg" class="d-block w-50" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="foto/8.jpg" class="d-block w-50" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="foto/10.jpg" class="d-block w-50" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="foto/11.jpg" class="d-block w-50" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="foto/12.jpg" class="d-block w-50" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="foto/13.jpg" class="d-block w-50" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="foto/14.jpg" class="d-block w-50" alt="..." />
+            </div>
+          </div>
         </div>
       </div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleControls"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleControls"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
 
-    <div class="structure">
-      <h2 class="klass text-center bg-dark">Stuktur & Jadwal</h2>
-      <div class="wali-kelas m-auto">Salsadilla Safitri s.pd</div>
-    </div>
+      <div id="Stucture" class="strukturjadwal" style="margin-top: 120px">
+        <!-- Tombol untuk menampilkan Struktur Kelas dan Jadwal -->
+        <div class="tombol">
+          <button id="structure-btn" class="btn">Structure</button>
+          <span class="dan">&</span>
+          <button id="schedule-btn" class="btn">Schedule</button>
+        </div>
+        <!-- Konten yang akan berubah berdasarkan tombol -->
+
+        <div id="display-area"></div>
+      </div>
+
+      <div class="chat-container">
+        <h1>Text Anonim</h1>
+        <div id="chat-box" class="chat-box">
+          <!-- Pesan akan muncul disini -->
+        </div>
+        <div class="input-area">
+          <input
+            type="text"
+            id="message-input"
+            placeholder="Ketik pesan Anda..."
+          />
+          <button id="send-btn">&#x27A4;</button>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="footer">
+        <div class="gambarfooter">
+          <img
+            src="logomw.png"
+            alt="Logo Maitreyawira"
+            width="50"
+            height="50"
+            class="logofooter"
+          />
+        </div>
+        <div class="created">
+          <h3>Created By</h3>
+
+          <div class="nama1 mt-4">
+            Chandra,Wilson
+            <div class="mt-4">Nicholas,Kisardi</div>
+            <div class="mt-4">Maverick,Risky</div>
+          </div>
+        </div>
+        <div class="mediasosal">
+          <span class="mediasosial">Follow Us</span><br />
+          <a
+            href="https://www.instagram.com/techwarriors19?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+            >instagram</a
+          >
+        </div>
+        <div class="container-ratting">
+          <div class="rating">
+            <p class="value">RATE US</p>
+            <p id="ratingValue">5.0</p>
+          </div>
+          <div class="face" id="face">😐</div>
+          <div class="slider-container">
+            <input
+              type="range"
+              min="1"
+              max="10"
+              value="5"
+              class="slider"
+              id="ratingSlider"
+            />
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <script src="script.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
-
-  <scrip
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"
-  ></scrip>
 </html>
